--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,24 @@
 /* Importando fonte moderna */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
+/*:root {
+  --cor-primaria: #2c3e50;
+  --cor-secundaria: #4ca1af;
+  --cor-botao: ;
+  --cor-botao-hover: #367a8d;
+  --cor-fonte: #fff;
+  --tamanho-fonte: 16px;
+}*/
+
+:root {
+  --cor-primaria: #003759;
+  --cor-secundaria: #44668eb8;
+  --cor-botao: ;
+  --cor-botao-hover: #0a1a41e2;
+  --cor-fonte: #fff;
+  --tamanho-fonte: 16px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -13,9 +31,13 @@
 body {
   /*justify-content: space-between;*/
   height: 100vh;
-  background: linear-gradient(135deg, #2c3e50, #4ca1af);
+  background: linear-gradient(
+    135deg,
+    var(--cor-primaria),
+    var(--cor-secundaria)
+  );
   background-attachment: fixed;
-  color: #fff;
+  color: var(--cor-fonte);
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
@@ -28,8 +50,8 @@ header {
   align-items: center;
   max-width: 100vw;
   padding: 20px calc(5vw);
-  background: rgba(38, 61, 77, 0.2);
-  /*background: #2c3e50;*/
+  /*background: rgba(38, 61, 77, 0.2);*/
+  background: var(--cor-primaria);
   /*background: linear-gradient(135deg, #2c3e50, #4ca1af);*/
   position: fixed;
   width: 100%;
@@ -40,7 +62,7 @@ header {
 .logo {
   font-size: 1.5em;
   font-weight: 600;
-  color: #ffffff;
+  color: var(--cor-fonte);
 }
 
 nav ul {
@@ -144,7 +166,7 @@ nav ul li a:hover {
   }
 
   .listaMenu ul li a {
-    color: #2c3e50;
+    color: var(--cor-primaria);
   }
 }
 
@@ -162,8 +184,8 @@ nav ul li a:hover {
   display: inline-block;
   margin-top: 15px;
   padding: 12px 25px;
-  background: #4ca1af;
-  color: #ffffff;
+  background: var(--cor-secundaria);
+  color: var(--cor-fonte);
   font-weight: bold;
   border-radius: 5px;
   text-decoration: none;
@@ -171,7 +193,7 @@ nav ul li a:hover {
 }
 
 .cta-button:hover {
-  background: #367a8d;
+  background: var(--cor-botao-hover);
 }
 
 .content-section {
@@ -190,7 +212,7 @@ nav ul li a:hover {
 
 .benefit {
   background: white;
-  color: #2c3e50;
+  color: var(--cor-primaria);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
@@ -204,7 +226,7 @@ nav ul li a:hover {
   top: 500px; /* A linha começa de cima da explicação */
   width: 2px;
   height: 30px; /* Tamanho da linha */
-  background-color: #4ca1af; /* Cor da linha vertical */
+  background-color: var(--cor-secundaria); /* Cor da linha vertical */
   transform: translateX(-50%); /* Para centralizar a linha */
 }
 
@@ -222,7 +244,7 @@ form textarea {
 }
 
 form button {
-  background: #2c3e50;
+  background: var(--cor-secundaria);
   color: white;
   padding: 10px 20px;
   border: none;
@@ -231,13 +253,13 @@ form button {
 }
 
 form button:hover {
-  background: #4d6c8a;
+  background: var(--cor-botao-hover);
 }
 
 footer {
   text-align: center;
   padding: 20px;
-  background: #2c3e50;
+  background: var(--cor-primaria);
   color: white;
 }
 
