--- a/css/style.css
+++ b/css/style.css
@@ -98,13 +98,12 @@ nav ul li a:hover {
 
 .listaMenu {
   display: flex;
+  justify-content: flex-end;
+  width: 100%; /* ou o tamanho desejado */
   list-style: none;
-  flex-direction: row;
+  gap: 10px;
   padding: 0;
   margin: 0;
-  gap: 10px;
-  position: relative;
-  bottom: -50px;
 }
 
 .hero {
